@startuml

state MaakFactuur {
    [*] -right-> TeVersturen
    TeVersturen -right-> Verzonden : Verstuur factuur
    Verzonden -down-> Betaald : Betaling ontvangen
    Verzonden -down-> Achterstallig : Betaling te laat
    Verzonden -down-> NietBetaald : Betaling niet ontvangen
    Achterstallig -right-> Betaald : Betaling ontvangen
    Achterstallig -left-> NietBetaald : Betaling niet ontvangen
    Achterstallig -down-> Gecrediteerd : Factuur gecrediteerd
    Verzonden --> Gecrediteerd : Factuur gecrediteerd
    NietBetaald -down-> Gecrediteerd : Factuur gecrediteerd
}

Betaald --> [*] 
Gecrediteerd --> [*]

@enduml